@@ -55,6 +55,10 @@
 					</td>
 				</tr>
 				<tr>
+					<td>Progress</td>
+					<td>{{bs-progress-animated progressDecimal=progress}}</td>
+				</tr>
+				<tr>
 					<td>{{t 'common.time.start'}}</td>
 					<td>{{formatUnixTimestamp startTime}}</td>
 				</tr>
